[project]
name = "autoqemu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Blackburn", email = "blackburnfjames@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "qemu-qmp>=0.0.5",
]

[project.scripts]
autoqemu = "autoqemu:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
